[package]
name = "eyrie"
version = "0.0.1"
readme = "README.md"
description = "A Rust framework for creating robust, modular, and high-performance backend applications."
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
axum = "0.7"
once_cell = "1.20.2"
quote = "1.0.37"
shaku = "0.6"
syn = "2.0.89"
tokio = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
