[package]
name = "eyrie"
version = "0.0.1"
readme = "README.md"
description = "A Rust framework for creating robust, modular, and high-performance backend applications."
repository.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
axum = "0.7"
convert_case = "0.6"
ctor = "0.2"
once_cell = "1"
quote = "1"
shaku = "0.6"
syn = "2"
tokio = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
